# ateneus_cooperatius

./: .gitignore  README.md  pyproject.toml
apps/coopolis/: forms.py
apps/coopolis/admin/: ProjectAdmin.py  ProjectsFollowUpAdmin.py
apps/coopolis/models/: projects.py
apps/dataexports/: export_functions.py
apps/dataexports/exports/: cofunded.py  covid_hours.py  justification.py  justification_2_itineraris.py  manager.py  memoria.py  memory.py  polls.py  row_factories.py  stages_details.py
coopolis_backoffice/settings/: dev.py
docker/: Dockerfile  compose-develop-hub.yml  docker-compose.yml  example.compose-dev.yml  example.compose-prod.yml  preproduction.yml  settings.env.example
docker-develop/: docker-compose.yml
docker-production/: docker-compose.yml
docker/nginx.conf/: site-develop.conf
docker/scripts/develop/: all_downloaddbs.sh  sh_vars.conf
src/: celerybeat-schedule  manage.py
src/apps/cc_courses/: apps.py  choices.py  models.py  urls.py  utils.py
src/apps/cc_lib/: fixtures.py
src/apps/cc_users/: constances.py  constansts.py  forms.py  tokens.py  urls.py  views.py
src/apps/celery/: celery.py
src/apps/coopolis/: apps.py  choices.py  context_processors.py  dashboard.py  dynamic_preferences_registry.py  filters.py  forms.py  helpers.py  mixins.py  urls.py
src/apps/dataexports/: admin.py  export_functions.py  models.py
src/apps/facilities_reservations/: admin.py  forms.py  models.py  views.py
src/apps/modelclone/: admin.py
src/conf/: custom_mail_manager.py  post_office.py  settings.py
src/conf/settings/: __init__.py
(+250 files in other folders)
