[tool.poetry]
name = "Ateneus Cooperatius"
version = "0.1.0"
description = ""
authors = ["Codi Cooperatiu <hola@codi.coop>"]

[tool.poetry.dependencies]
python = "^3.11.1"
Django = "^5.1.4"
psycopg2-binary = "^2.9.10"
# Mantenir weasyprint a v52 degut a: https://github.com/Kozea/WeasyPrint/issues/1384
weasyprint = "62.3"
django-constance = {extras = ["database"], version = "^2.9.0"}
boto3 = "^1.35.96"
easy-thumbnails = "^2.8.1"
django-storages = "^1.14.4"
django-grappelli = "^4.0.1"
gunicorn = "^23.0.0"
openpyxl = "^3.1.5"
django-object-actions = "^4.3.0"
django-maintenance-mode = "^0.21.1"
django-logentry-admin = "^1.1.0"
django-tagulous = "^2.1.0"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
six = "^1.17.0"
whitenoise = "^6.8.2"
django-sendgrid-v5 = "^1.2.4"
django-summernote = "^0.8.20.0"
celery = "^5.4.0"
qrcode = "^8.0"
loggly-python-handler = "^1.0.1"
icecream = "^2.1.4"
django-localflavor = "^4.0"
django-post-office = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
